essential/rook-ceph/toolbox-operator-image.yaml
#################################################################################################################
# Define the toolbox that will run with the Rook operator image.

# For example
#   kubectl create -f toolbox-operator-image.yaml
#################################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-tools-operator-image
  namespace: rook-ceph # namespace:cluster
  labels:
    app: rook-ceph-tools-operator-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools-operator-image
  template:
    metadata:
      labels:
        app: rook-ceph-tools-operator-image
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: rook-ceph-default
      containers:
        - name: rook-ceph-tools-operator-image
          image: docker.io/rook/ceph:v1.15.5
          command:
            - /bin/bash
            - -c
            - |
              [...]
          imagePullPolicy: IfNotPresent
          tty: true
          securityContext:
            runAsNonRoot: true
            runAsUser: 2016
            runAsGroup: 2016
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/ceph
              name: ceph-config
            - name: mon-endpoint-volume
              mountPath: /etc/rook
            - name: ceph-admin-secret
              mountPath: /var/lib/rook-ceph-mon
              readOnly: true
      volumes:
        - name: ceph-admin-secret
          secret:
            secretName: rook-ceph-mon
            optional: false
            items:
              - key: ceph-secret
                path: secret.keyring
        - name: mon-endpoint-volume
          configMap:
            name: rook-ceph-mon-endpoints
            items:
              - key: data
                path: mon-endpoints
        - name: ceph-config
          emptyDir: {}
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
